--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,7 @@ jobs:
 
       - name: Create release tag
         if: steps.changesets.outputs.hasChangesets == 'false'
-        run: npx changeset tag
+        run: |
+          npx changeset tag
+          git push --tags
+
