--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -10,6 +10,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@eslint/js": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "typescript-eslint": "^7.6.0"
   },
