--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -18,7 +18,7 @@
     "eslint": "^8.57.0"
   },
   "exports": {
-    "ts": "ts-config.mjs",
-    "js": "js-config.cjs"
+    "./ts": "./ts-config.mjs",
+    "./js": "./js-config.cjs"
   }
 }
