--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,19 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup Node.js 20.x
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
+          cache: 'pnpm'
 
       - name: Install Dependencies
-        run: npm i
+        run: pnpm i
 
       - name: Create .npmrc to auth w/ github packages
         run: |
@@ -31,10 +37,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Release Pull Request or Publish to npm
+      - name: Create Release Pull Request or Publish to pnpm
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: npm run ci:release
+          publish: pnpm run ci:release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
