--- a/packages/style/package.json
+++ b/packages/style/package.json
@@ -11,13 +11,13 @@
     "./eslint/js": "./configs/eslint-js.cjs"
   },
   "dependencies": {
-    "@eslint/js": "^9.0.0",
+    "@eslint/js": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "typescript-eslint": "^7.6.0"
+    "typescript-eslint": "^8.11.0"
   },
   "peerDependencies": {
-    "prettier": "^3.0.0",
-    "eslint": "^8.0.0"
+    "eslint": "^9.0.0",
+    "prettier": "^3.0.0"
   }
 }
