--- a/packages/style-svelte/package.json
+++ b/packages/style-svelte/package.json
@@ -14,7 +14,8 @@
     "eslint-plugin-svelte": "^2.36.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "typescript-eslint": "^8.11.0"
+    "typescript-eslint": "^8.11.0",
+    "prettier-plugin-svelte": "^3.2.6"
   },
   "peerDependencies": {
     "prettier": "^3.0.0",
